--- a/mysite/blog/templates/base.html
+++ b/mysite/blog/templates/base.html
@@ -83,7 +83,7 @@
                         {% else %}
 
                         <li class="nav-item text-black">
-                            <a class="nav-link text-black font-weight-bold" href="/login">Login</a>
+                            <a class="nav-link text-black font-weight-bold" href="{% url 'login' %}">Login</a>
                         </li>
 
                         {% endif %}
@@ -92,6 +92,7 @@
                 
                         
             </div>
+            
         </nav>
         {% block content %}
         <!-- Content Goes here -->
