--- a/mysite/blog/templates/contact.html
+++ b/mysite/blog/templates/contact.html
@@ -10,6 +10,16 @@
 </head>
 <body  id='bg' style="background-image:url('{% static 'img/abt9.png' %}'); " >
 
+     <style>
+           #bg{
+            background-image:linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)); 
+            background-repeat: no-repeat;
+            background-size : 1600px 800px;
+            background-position: auto;
+            background-attachment: fixed;
+        }
+     </style>
+
      <section class="contact">
           <div class="content">
               <h2>Contact Us</h2>
@@ -18,7 +28,7 @@
           <div class="container">
              <div class="contactInfo">
                     <div class="box">
-                    <div class="icon"></div>
+                    <div class="icon"><img src="{% static 'img/map1.png'%}" class="d-block w-100" width="60px" height="50px" alt="..."></div>
                     <div class="text">
                             <h3>Address</h3>
                             <p>4671 Sugar Camp Road,<br>Owatonna,Minnesota,<br>55060</p>
@@ -26,7 +36,7 @@
                     </div>
              </div>
              <div class="box">
-                    <div class="icon"></div>
+                    <div class="icon"><img src="{% static 'img/phone1.png'%}" class="d-block w-100" width="55px" height="50px" alt="..."></div>
                     <div class="text"> 
                             <h3>Phone</h3>
                             <p>507-475-6094</p>
@@ -34,7 +44,7 @@
                     </div>
              </div>
              <div class="box">
-                    <div class="icon"></div>
+                    <div class="icon"><img src="{% static 'img/mail3.png'%}" class="d-block w-100" width="55px" height="50px" alt="..."></div>
                     <div class="text">
                             <h3>Email</h3>
                             <p>browniepoints@gmail.com</p>
@@ -65,7 +75,7 @@
                               <div class="col-lg-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                                    <input type="text" name="message-name" class="form-control mb-30" placeholder="Your Name">
                               </div>
-
+                              
                               <div class="col-lg-6" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
                               <input type="email" name="message-email" class="form-control mb-30" placeholder="Your Email">
                               </div>
@@ -75,7 +85,7 @@
                               </div>
                               
                               <div class="col-12" stroke="currentColor" stroke-width="2" fill="none" stroke-linecap="round" stroke-linejoin="round">
-                              <button type="submit"  class="btn dento-btn">Send message</button>
+                              <button type="submit" class="btn btn-outline-info">Send message</button>
                               </div>
                               </div>  
 
@@ -86,7 +96,7 @@
              </div>  
              </div>
           </div>    
-
+          
 
      </section>
      {% endif %}
