--- a/mysite/blog/templates/contact.html
+++ b/mysite/blog/templates/contact.html
@@ -108,4 +108,4 @@
 </html>
 
 
-<!--python -m smtpd -n -c DebuggingServer localhost:1025-->
+{% comment %} <!--python -m smtpd -n -c DebuggingServer localhost:1025--> for email feedback {% endcomment %}
