--- a/mysite/blog/templates/base.html
+++ b/mysite/blog/templates/base.html
@@ -88,10 +88,16 @@
 
                         {% endif %}
                     </ul>
+                    
+                    <form class="d-flex" method="GET" action="/search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search" name="query" id="query">
+                        <button class="btn btn-outline-info" type="submit">Search</button>
+                    </form>
                 </div>
                 
                         
             </div>
+
             
         </nav>
         {% block content %}
